--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>laserscan_localization</name>
+  <name>arduino_publihser</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="tahirkhursheed2070@gmail.com">tahir</maintainer>
-  <license>TODO: License declaration</license>
+  <maintainer email="muhammdosal123@gmail.com">osal</maintainer>
+  <license>MIT</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-  <build_depend>moveit_common</build_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
   <depend>control_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>moveit_msgs</depend>
@@ -16,8 +18,10 @@
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
   <depend>nav_msgs</depend>
+  <depend>motor_data_msgs</depend>
+  <depend>motor_data_msgs_ros2</depend>
+  <build_depend>roscpp</build_depend>
 
-  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
